Bug 459303 - Masks don't update their projection properly if they're applied to a group layer with passthrough enabled
Summary: Masks don't update their projection properly if they're applied to a group la...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 5.1.1
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-17 23:17 UTC by tomtomtomreportingin
Modified: 2022-09-19 16:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2022-09-17 23:17:37 UTC
SUMMARY
Note: I know that group layers with passthrough don't support masks.

The problem here is that mask projection isn't updated properly after disabling passthrough, if the mask is created for a group that already has passthrough enabled. See reproduction steps.


STEPS TO REPRODUCE
1. Create a group layer with a paint layer inside.
2. Paint something.
3. Enable Passthrough on the group layer.
4. Add a Gaussian Blur filter mask to the group layer.
5. Disable passthrough.

OBSERVED RESULT
The projection isn't updated to show the blur. The mask has to be hidden and unhidden for the projection to start updating properly.

EXPECTED RESULT
The projection should be updated to show the blur from the mask.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.12.12 (appimage)
Comment 1 Dmitry Kazakov 2022-09-19 16:47:39 UTC
Git commit 61916c60837ba22de5d82b41c6ef836d6e04a016 by Dmitry Kazakov.
Committed on 19/09/2022 at 16:47.
Pushed by dkazakov into branch 'master'.

Make sure that masks cache is reset when a group changes pass-through mode

M  +1    -0    libs/image/kis_group_layer.cc

https://invent.kde.org/graphics/krita/commit/61916c60837ba22de5d82b41c6ef836d6e04a016
Comment 2 Dmitry Kazakov 2022-09-19 16:48:01 UTC
Git commit a5774ca5c11a31725f44d1b298ed81ab973d1aeb by Dmitry Kazakov.
Committed on 19/09/2022 at 16:47.
Pushed by dkazakov into branch 'krita/5.1'.

Make sure that masks cache is reset when a group changes pass-through mode


(cherry picked from commit 61916c60837ba22de5d82b41c6ef836d6e04a016)

M  +1    -0    libs/image/kis_group_layer.cc

https://invent.kde.org/graphics/krita/commit/a5774ca5c11a31725f44d1b298ed81ab973d1aeb