Make sure that masks cache is reset when a group changes pass-through mode

BUG:459303


(cherry picked from commit 61916c60837ba22de5d82b41c6ef836d6e04a016)